--- a/styles.css
+++ b/styles.css
@@ -63,3 +63,13 @@ button:hover {
     font-weight: bold;
     text-align: center;
 }
+.button-group {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+button {
+    flex: 1;
+    margin: 0 5px;
+}
