--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,13 @@ body {
 }
 
 header {
+    background-color: #3498db; /* Adjust this color as needed */
+    width: 100%;
+    padding: 20px 0;
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
+    border-radius: 8px 8px 0 0; /* Rounded top corners */
 }
 
 .logo {
@@ -59,7 +63,7 @@ input, select {
 }
 
 img {
-    max-width: 100px;
+    max-width: 150px; /* Increase the size of the images */
     height: auto;
     display: block;
     margin: 0 auto;
@@ -73,7 +77,7 @@ img {
 
 button {
     flex: 1;
-    padding: 10px;
+    padding: 15px; /* Increase the size of the buttons */
     margin: 0 5px;
     border: none;
     border-radius: 4px;
@@ -101,7 +105,7 @@ button:disabled {
 
 #downloadButton {
     margin-top: 20px;
-    padding: 10px 20px;
+    padding: 15px; /* Increase the size of the download button */
     background-color: #27ae60;
     color: #fff;
     border: none;
