--- a/styles.css
+++ b/styles.css
@@ -29,9 +29,9 @@ header {
 }
 
 .logo {
+    width: 100%;
     max-width: 800px;
     height: auto;
-    display: block;
     margin-bottom: 20px;
 }
 
