--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ h1 {
     margin-bottom: 5px;
     font-weight: bold;
     color: #333;
+    align: center;
 }
 
 input[type="number"],
@@ -80,7 +81,7 @@ button {
     border-radius: 4px;
     cursor: pointer;
     display: flex;
-    width: 50%;
+    width: 80%;
     margin-top: 10px;
     font-size: 16px;
 }
