--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ h1 {
 
 
 .form-group label {
-    display: block;
+    display: flex;
     margin-bottom: 5px;
     font-weight: bold;
     color: #333;
@@ -84,6 +84,7 @@ button {
     width: 80%;
     margin-top: 10px;
     font-size: 16px;
+    text-align: center;
 }
 
 button:hover {
