--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,6 @@ h1 {
     margin-bottom: 5px;
     font-weight: bold;
     color: #333;
-    align: center;
 }
 
 input[type="number"],
@@ -85,7 +84,7 @@ button {
     width: 45%;
     margin-top: 10px;
     font-size: 16px;
-    align-items: right;
+    align-items: justify;
 }
 
 button:hover {
